appId: com.passportquest.mobile.staging
---
- launchApp:
    clearState: true
- runFlow:
    when:
      visible: "Allow only while using the app"
    commands:
      - tapOn: "Allow only while using the app"
- runFlow:
    when:
      visible: "While using the app"
    commands:
      - tapOn: "While using the app"
- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"
- runFlow:
    when:
      visible: "Pick your explorer name"
    commands:
      - tapOn: "e.g. atul_explorer"
      - eraseText
      - inputText: "qa_runner_android"
      - tapOn: "Start Questing"
- runFlow:
    when:
      visible: "Quests"
    commands:
      - tapOn: "Quests"
      - assertVisible: "Offline Sync"
- runFlow:
    when:
      visible: "Social"
    commands:
      - tapOn: "Social"
      - assertVisible: "Social Feed"
- runFlow:
    when:
      visible: "Profile"
    commands:
      - tapOn: "Profile"
      - assertVisible: "Profile & Badges"
